Make mtdInnerFrame more like the inner frame of non-MathML table cells. Bug 354510, r+sr=rbs, a=mconnor